--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "tailwind-merge": "^1.2.1"
+    "swr": "^1.3.0",
+    "tailwind-merge": "^1.2.1",
+    "tiktok-api": "^0.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@types/react": "^18.0.6",
