--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
+    "framer-motion": "^6.3.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
