--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@api/*": ["./src/pages/api/*"],
       "~/*": ["./public/*"]
     },
     "incremental": true
