--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@keyvhq/core": "^1.6.9",
+    "@keyvhq/sqlite": "^1.6.7",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
+    "got-scraping": "^3.2.9",
+    "memoizee": "^0.4.15",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.2.1",
-    "tiktok-api": "^0.4.1"
+    "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -39,8 +43,10 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
+    "@types/memoizee": "^0.4.7",
     "@types/react": "^18.0.6",
     "@types/tailwindcss": "^3.0.10",
+    "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
