--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
   "name": "ts-nextjs-tailwind-starter",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": ">=1.0.0",
+    "node": ">=16.0.0"
+  },
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "start-test-server": "start-server-and-test 'yarn dev -p 3000'",
+    "cy:open-only": "cypress open",
+    "cy:open": "yarn start-test-server 3000 'cypress open'",
+    "cy:run-only": "cypress run",
+    "cypress:run": "yarn start-test-server 3000 'cypress run'",
+    "dev": "next dev",
+    "format:check": "prettier -c .",
+    "format": "prettier -w .",
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
-    "typecheck": "tsc --noEmit --incremental false",
+    "lint": "next lint",
+    "postbuild": "next-sitemap",
+    "prepare": "husky install",
+    "push-release": "git push --follow-tags origin main",
+    "release": "standard-version",
+    "start": "next start",
     "test:watch": "jest --watch",
     "test": "jest",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "release": "standard-version",
-    "push-release": "git push --follow-tags origin main",
-    "postbuild": "next-sitemap",
-    "prepare": "husky install"
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
     "@keyvhq/core": "^1.6.9",
@@ -26,7 +35,6 @@
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
     "got-scraping": "^3.2.9",
-    "memoizee": "^0.4.15",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -43,13 +51,13 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
-    "@types/memoizee": "^0.4.7",
     "@types/react": "^18.0.6",
     "@types/tailwindcss": "^3.0.10",
     "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
+    "cypress": "^9.6.0",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
@@ -63,6 +71,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "standard-version": "^9.3.2",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   },
