--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "cypress/integration/index.spec.js"
+  ],
+  "exclude": ["node_modules", "cypress", "public"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
