--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/sqlite": "^1.6.7",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
