--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "yarn": ">=1.0.0",
-    "node": ">=15.0.0"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "build": "next build",
@@ -35,14 +35,13 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
-    "got-scraping": "^3.2.9",
     "next": "^12.1.5",
+    "puppeteer": "^13.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "swr": "^1.3.0",
-    "tailwind-merge": "^1.2.1",
-    "tough-cookie": "^4.0.0"
+    "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
@@ -54,7 +53,6 @@
     "@testing-library/react": "^13.1.1",
     "@types/react": "^18.0.6",
     "@types/tailwindcss": "^3.0.10",
-    "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
