--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "scripts": {
     "build": "next build",
-    "start-test-server": "start-server-and-test 'yarn dev -p 3000'",
     "cy:open-only": "cypress open",
     "cy:open": "yarn start-test-server 3000 'cypress open'",
     "cy:run-only": "cypress run",
-    "cypress:run": "yarn start-test-server 3000 'cypress run'",
+    "cy:run": "yarn start-test-server 3000 'cypress run'",
     "dev": "next dev",
     "format:check": "prettier -c .",
     "format": "prettier -w .",
@@ -23,6 +22,7 @@
     "prepare": "husky install",
     "push-release": "git push --follow-tags origin main",
     "release": "standard-version",
+    "start-test-server": "start-server-and-test 'yarn dev -p 3000'",
     "start": "next start",
     "test:watch": "jest --watch",
     "test": "jest",
@@ -33,13 +33,15 @@
     "@keyvhq/core": "^1.6.9",
     "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
     "next": "^12.1.5",
+    "puppeteer-core": "^13.7.0",
     "puppeteer": "^13.7.0",
-    "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react": "^18.0.0",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.2.1"
   },
@@ -57,18 +59,18 @@
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
     "cypress": "^9.6.0",
-    "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint": "^8.14.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.4.0",
     "next-sitemap": "^2.5.20",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
+    "prettier": "^2.6.2",
     "standard-version": "^9.3.2",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.24",
